TOC more-or-less font independent; Atkinson-Hyperlegible font.

--- a/shared/category.tex
+++ b/shared/category.tex
@@ -397,7 +397,7 @@ than what's drawn.
 I think this is usually an unconscious choice,
 but, even so, it has the effect of hiding and distracting 
 from the parts of the graphical representation that would
-be most open fo questions and doubt.
+be most open to questions and doubt.
 An example is probabilistic graphical models/bayesian networks
 in machine learning, where highly questionable
 independence assumptions correspond to edges that 
