update templates and tests

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -3899,11 +3899,13 @@ for the Church-Curry $\lambda$-calculus.},
   year   = {1989},
 }
 
-@Book{ShalitPiazzaMoon:1992:Dylan,
-  author    = {Andrew Shalit and Jeffrey Piazza and David Moon},
-  title     = {Dylan an object-oriented dynamic language},
-  publisher = {Apple Computer Eastern Research and Technology},
-  year      = {1992},
+@Online{Serre:2003:WritingMathBadly,
+author= { {Jean-Pierre} Serre},
+title = {How to write mathematics badly},
+year = {2007},
+url = {https://www.youtube.com/watch?v=ECQyFzzBHlo},
+note = { Transcript at 
+\url{https://cpb-us-w2.wpmucdn.com/web.sas.upenn.edu/dist/0/713/files/2020/07/WritingMath_transcript.pdf}},
 }
 
 @InCollection{sep:ClassicalLogic,
@@ -3915,6 +3917,13 @@ for the Church-Curry $\lambda$-calculus.},
   publisher    = {Metaphysics Research Lab, Stanford U},
   howpublished = {\url{https://plato.stanford.edu/archives/spr2018/entries/logic-classical/}},
   year         = {2018},
+}
+
+@Book{ShalitPiazzaMoon:1992:Dylan,
+  author    = {Andrew Shalit and Jeffrey Piazza and David Moon},
+  title     = {Dylan an object-oriented dynamic language},
+  publisher = {Apple Computer Eastern Research and Technology},
+  year      = {1992},
 }
 
 @Online{Shulman:2008:SetThForCatTh,
