--- a/tests/math.tex
+++ b/tests/math.tex
@@ -1,15 +1,15 @@
 % !TEX TS-program = arara
 % arara: xelatex: { synctex: on, options: [-halt-on-error] } 
-%% arara: biber
-%% arara: makeglossaries
-%% arara: makeindex
-%% arara: xelatex: { synctex: on, options: [-interaction=batchmode, -halt-on-error] } 
-%% arara: xelatex: { synctex: on, options: [-interaction=batchmode, -halt-on-error]  } 
-% arara: clean: { extensions: [ aux, log, out, run.xml, toc, mw, synctex.gz, ] }
-%% arara: clean: { extensions: [ bbl, bcf, blg, ] }
-%% arara: clean: { extensions: [ glg, glo, gls, ] }
-%% arara: clean: { extensions: [ idx, ilg, ind, xdy, ] }
-%% arara: clean: { extensions: [ plCode, plData, plMath, plExercise, plNote, plQuote, ] }
+% % arara: biber
+% % arara: texindy: { markup: xelatex }
+% % arara: makeglossaries
+% % arara: xelatex: { synctex: on, options: [-interaction=batchmode, -halt-on-error] }
+% % arara: xelatex: { synctex: on, options: [-interaction=batchmode, -halt-on-error]  }
+% % arara: clean: { extensions: [ aux, log, out, run.xml, ptc, toc, mw, synctex.gz, ] }
+% % arara: clean: { extensions: [ bbl, bcf, blg, ] }
+% % arara: clean: { extensions: [ glg, glo, gls, ] }
+% % arara: clean: { extensions: [ idx, ilg, ind, xdy, ] }
+% % arara: clean: { extensions: [ plCode, plData, plMath, plExercise, plNote, plQuote, ] }
 %-----------------------------------------------------------------
 \documentclass{PalisadesLakesArticle}
 %\geomKindlePaperWhite
@@ -17,17 +17,18 @@
 \geomLandscape
 
 %\AsanaFonts % misssing \mathhyphen; less on page than Cormorant/Garamond
-\CormorantFonts % very light
-%\EBGaramondFonts % is this duffner or pardo?
+%\CormorantFonts % light, missing unicode greek, needs scaling relative to monfont
+%\EBGaramondFonts % fewest pages
 %\ErewhonFonts
-%\FiraFonts % tall lines, all sans, much less per page
-%\GFSNeohellenicFonts
+%\FiraFonts % tall lines, all sans, much less per page, missing \in?
+%\GFSNeohellenicFonts 
 %\KpFonts
 %\LatinModernFonts
+\LegibleFonts
 %\LibertinusFonts
 %\NewComputerModernFonts
 %\STIXTwoFonts
-%\BonumFonts
+%\BonumFonts % most pages
 %\PagellaFonts
 %\ScholaFonts
 %\TermesFonts
