start custom \LegibleMathFont

--- a/tests/math.tex
+++ b/tests/math.tex
@@ -54,6 +54,10 @@ $
 ;
 $\nabla_{x} f (y) \in \codomain ( f )$
 
+$\mathsf{1lIiL} \; \mathbfsf{1lIiL}$
+
+$\mathsfit{1lIiL} \; \mathbfsfit{1lIiL}$
+
 \begin{eqnarray}
 \Vector{v_{01}} & = & \Point{p}_{0} - \Point{p}_{1} \in \symfrak{K}^n
 \\
